--- a/config.toml
+++ b/config.toml
@@ -8,20 +8,28 @@ summaryLength  = 120
 enableRobotsTXT = true
 
 # ブログのタイトル
-title = "hugo-blog-template"
+title = "Bioinfo Blog"
 
 theme = "mainroad"
 paginate = 20
 
+# メインメニュー
+[[Menus.main]]
+  Name = "ホーム"
+  URL = "/"
+[[Menus.main]]
+  Name = "投稿一覧"
+  URL = "/posts/"
+
 # 自己紹介
 [Author]
-    name = "Author"
-    bio = "ここに自己紹介を入れることができます"
+    name = "久野 朗広/Akihiro Kuno"
+    bio = ""
     avatar = "img/avatar.png"
 
 [Params]
     customCSS = ["css/custom.css"]
-    copyright = "Author"
+    copyright = "Akihiro Kuno"
     readmore = true
     authorbox = true
     post_meta = ["date", "categories"]
