--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ paginate = 10
     twitter_cards = true
     authorbox = false
     toc = true
+    favicon = "static/img/favicon/favicon.ico"
 
 # ページのテーマカラー
 [Params.style.vars]
