--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/mainroad"]
 	path = themes/mainroad
 	url = https://github.com/Vimux/Mainroad
+[submodule "themes/theer"]
+	path = themes/theer
+	url = https://github.com/qqhann/theer.git
